--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.2.3",
     "uuid": "^9.0.1"
   },
