add custom hook for OneMap, add environment variables to store OneMap specific sensitive information, add location, search bar to determine location, and react-leaflet

--- a/frontend/project3/example.env
+++ b/frontend/project3/example.env
@@ -1,1 +1,4 @@
 VITE_SERVER=http://localhost:5001
+VITE_ONE_MAP=https://www.onemap.gov.sg/
+VITE_ONE_MAP_EMAIL=youremail@email.com
+VITE_ONE_MAP_PASSWORD=yourpasswordhere
