revise frontend vercel.json

--- a/frontend/project3/vercel.json
+++ b/frontend/project3/vercel.json
@@ -2,8 +2,9 @@
   "version": 2,
   "builds": [
     {
-      "src": "*.js",
-      "use": "@vercel/node"
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [{ "src": "/(.*)", "dest": "/" }]
