--- a/frontend/project3/vercel.json
+++ b/frontend/project3/vercel.json
@@ -7,5 +7,5 @@
       "config": { "distDir": "dist" }
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "routes": [{ "src": "/(.*)", "dest": "/index.html" }]
 }
