--- a/frontend/project3/vercel.json
+++ b/frontend/project3/vercel.json
@@ -7,5 +7,8 @@
       "config": { "distDir": "dist" }
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "/index.html" }]
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/index.html", "continue": true }
+  ]
 }
